--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="assets/css/layout.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/controls.css" type="text/css" />
     
-    <script type="application/javascript" src="assets/js/controls.js"></script>
+    <script type="text/javascript" src="https://use.fontawesome.com/45c73aaa68.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="assets/js/controls.js"></script>
+    <script type="text/javascript" src="assets/js/screen.js"></script>
     
 </head>
 
