--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
 
                 </div>
                 <div class="video-controls-right">
+                    <ul>
+                        <li>
+                            <button id="fs" type="button">
+                                <span class="left"></span>
+                                <span class="right"></span>
+                            </button>
+                        </li>
+                        <li></li>
+                    </ul>
                 </div>
             </div>
         </div>
