Refractoring - Added linear-gradient as background for top and bottom bars of the video. :art:
Added linear-gradient as background image for the control-bars (top and bottom bars). Also refractoring

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <!--Video Player Controls-->
-        <div id="videoControlsAndProgress">
+        <div id="videoControlsAndProgress" class="video-bottom-bar">
 
             <div class="video-progress">
                 <!--<span class="time-left">Time</span>
