--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/css/layout.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/controls.css" type="text/css" />
     
+    <link rel="icon" href="assets/img/favicon.ico" type="x-type/icon">
+
     <script type="text/javascript" src="https://use.fontawesome.com/45c73aaa68.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/controls.js"></script>
