--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
                 </div>
             </div>
         </div>
+
+        <div class="videoCenter">
+            <i class="fa fa-play" id="centerPlayPause"></i>
+        </div>
+
         <!--<figcaption>Video Caption Here</figcaption>-->
 
     </figure>
