Changed the video source

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <figure id="videoContainer" class="videoContainer" onkeypress="handleKeyPress(event)">
         <div id="videoWrapper" >
             <video id="video" controls preload="metadata" poster="vid/poster.png">
-                <source id="videoSource" src="vid/video.mp4" type="video/mp4">
+                <source id="videoSource" src="vid/627965480.mp4" type="video/mp4">
                 <!--flash fallback-->
                 <!--flash fallback code here-->
             </video>
