--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <figure id="videoContainer" class="videoContainer" onkeypress="handleKeyPress(event)">
         <div id="videoWrapper" >
-            <video id="video" controls preload="metadata" poster="vid/poster.png">
+            <video id="video" controls preload="metadata" poster="vid/poster_1.png">
                 <source id="videoSource" src="vid/627965480.mp4" type="video/mp4">
                 <!--flash fallback-->
                 <!--flash fallback code here-->
